- updated dutch translation (thanks to Michel Van den Bergh)
- updated spanish translation (thanks to Benigno Hernández)
- Fix : Tree window : when a Mask is opened, the whole line is clickable (not only the part with moves and stats)
- Fix : FICS connection. Better handling of connection error if behind a firewall or network is down, and avoid parsing of incomplete packets (new code ported to Scid Pocket)
- Fix : FICS bug when parsing players names and ELO
- Tree window : when a Tree is updated and the current base is not the Tree's one, the Tree base will automatically load the first game in the filter (so by switching to the Tree's base, the position is already set to the previous one and for example an Opening report can be immediately generated)
- Import clipboard as game : on Unix systems the X selection is pasted only if the clipboard is empty
- MacOS : various updates (better support, among them the switch of mouse buttons 2 & 3) (thanks to Israel Chauca Fuentes)
- Book : 
	* last opened book is reopened by default
	* Books should be usable from read only drives as well (without
	tuning/save of course)
- Bug : fixed a possible crash when generating a player report when the opened base has no games (segmentation fault)
- Analysis / Game annotation : book moves are now translated
- Serious game and Tactical game : parameters are saved
- added spanish ECO file scid-esp.eco (thanks to Benigno Hernández)
- newly created bases are appended to the recently opened bases in menu (thanks to Benigno Hernández)
- "Average Elo" and "average year" could be wrong with large databases. Corrected by using 64 bits integers (thanks to Heinz van Saanen)