@@ -26,23 +26,23 @@
 // constants and variables
 
 const int KnightOutpostMatrix[2][64] = {
-     0,	 0,   0,   0,   0,   0,   0,   0,
+    {0,	 0,   0,   0,   0,   0,   0,   0,
      0,	 0,   0,   0,   0,   0,   0,   0,
      0,	 0,   0,   0,   0,   0,   0,   0,
      0,	 2,   5,  10,  10,   5 ,  2,   0,
      0,	 2,   5,  10,  10,   5,   2,   0,
      0,	 0,   4,   5,   5,   4,   0,   0,
      0,	 0,   0,   0,   0,   0,   0,   0,
-     0,	 0,   0,   0,   0,   0,   0,   0,
+     0,	 0,   0,   0,   0,   0,   0,   0},
 
-     0,	 0,   0,   0,   0,   0,   0,   0,
+    {0,	 0,   0,   0,   0,   0,   0,   0,
      0,	 0,   0,   0,   0,   0,   0,   0,
      0,	 0,   4,   5,   5,   4,   0,   0,
      0,	 2,   5,  10,  10,   5,   2,   0,
      0,	 2,   5,  10,  10,   5,   2,   0,
      0,	 0,   0,   0,   0,   0,   0,   0,
      0,	 0,   0,   0,   0,   0,   0,   0,
-     0,	 0,   0,   0,   0,   0,   0,   0,
+     0,	 0,   0,   0,   0,   0,   0,   0},
 };
 
 static int lazy_eval_cutoff = 200; /* Thomas */
